--- a/Hub.Retailer.Specs/Hub.Retailer.Specs.csproj
+++ b/Hub.Retailer.Specs/Hub.Retailer.Specs.csproj
@@ -15,11 +15,11 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Drivers\" />
     <Folder Include="Features\Contracts\" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Hub.Core\Hub.Core.csproj" />
     <ProjectReference Include="..\Hub.Retailer.Common\Hub.Retailer.Common.csproj" />
     <ProjectReference Include="..\Hub.Retailer.Data\Hub.Retailer.Data.csproj" />
   </ItemGroup>
