--- a/Hub.Retailer.Specs/appsettings.json
+++ b/Hub.Retailer.Specs/appsettings.json
@@ -1,10 +1,10 @@
 ﻿{
   "BaseSettings": {
-    "Environment": "AETST03",
+    "Environment": "AEDEV03",
     "BrowserType": "firefox",
     "PlaywrightSettings": {
       "Headless": false,
-      "SlowMo": 1000,
+      "SlowMo": 2000,
       "ScreenshotSettings": {
         "Toggle": "off", // value "on" to enable screenshot, "off" to disable
         "StoredDirectory": "screenshot/"
