#12 correct DI and implement func to get available address

--- a/Hub.Retailer.Data/Hub.Retailer.Data.csproj
+++ b/Hub.Retailer.Data/Hub.Retailer.Data.csproj
@@ -20,4 +20,10 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Scripts\GenerateNMI.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
