--- a/Hub.Retailer.Specs/appsettings.json
+++ b/Hub.Retailer.Specs/appsettings.json
@@ -4,13 +4,13 @@
     "BrowserType": "firefox",
     "PlaywrightSettings": {
       "Headless": false,
-      "SlowMo": 2000,
+      "SlowMo": 1500,
       "ScreenshotSettings": {
         "Toggle": "off", // value "on" to enable screenshot, "off" to disable
         "StoredDirectory": "screenshot/"
       },
       "RecordSettings": {
-        "Toggle": "off", // value "on" to enable record, "off" to disable
+        "Toggle": "on", // value "on" to enable record, "off" to disable
         "StoredDirectory": "videos/"
       }
     }
